--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8">
+
 <head>
 	<title>Журнал</title>
 </head>
 <header>URBAN|портрет/portrait</header>
-<nav>
-	<a href="https://archi.ru/russia/image_large.html?id=193274">ссылка на журнал</a>
-	<a href="#">ссылка еще куда-нибудь</a>
-</nav>
 <body>
 	<section>
 		<h1>Сергей Чобан</h1>
-		<blockquote><i>Эксперименты в архитектуре возможны повсюду</i></<blockquote>
+		<h2><i>Эксперименты в архитектуре возможны повсюду</i></h2>
 		<aside><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi <br>ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <br>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</aside></p>
 	</section>
 	<section>
